@@ -1,0 +1,6 @@
+- content_class ||= ''
+- box_class     ||= ''
+
+.box{:class => box_class}
+  %div{:class => "content #{content_class}"}
+    =body
