@@ -1,4 +1,4 @@
-.box.alt.first_alt
+-box :box_class => 'alt first_alt' do
   = link_to( "&raquo; #{:back_to_all_users.l}", users_path) if params['login'] || params['tag_list']
   - form_tag users_path, :method => :get , :class => 'MainForm' do
     %label= :user_login.l+":"
@@ -10,7 +10,7 @@
       %input{"type"=>"submit", "value"=>:search_users.l}
 
 
-.box.alt
+-box :box_class => 'alt' do
   %h3= :metro_areas.l
   - city_cloud @metro_areas_for_cloud, %w(nube1 nube2 nube3 nube4 nube5) do |city, css_class|
     = link_to city.name, users_path(:metro_area_id => city.id), :class => css_class
