@@ -5,7 +5,7 @@
 
 #yui-main
   .yui-b
-    .box.user_list
+    -box :box_class => "user_list" do
       %h3=:site_members.l :site => AppConfig.community_name
 
       .pagination= paginating_links @users, :params => params if @users.page_count > 1
