@@ -10,6 +10,7 @@
 * allow moderators/activity owners to delete activities
 * only track login activity once per day
 * allow anonymous commenters to choose whether they want to receive follow-up comment notices by e-mail
+* refactor views to use 'box' helper for logical content modules, allowing better flexibility when trying to customize layouts
 
 = 1.0.1
 * fixed error when cropping photos using file system storage
